# nexus

./: .clang-format  .clangd  .gitignore  .gitmodules  Doxyfile  README.md  default.nix  flake.nix  meson.build
docs/nexus/: exec.md  format.md
docs/nexus/utils/: format.md
include/: meson.build
include/fp/: curried.hpp  lazy.hpp  policy.hpp
include/fp/collection/: proxy.hpp
include/fp/private/: args.hpp  curried.hpp
include/nexus/: .config  common.hpp  config.hpp  create.hpp  curried.hpp  error.hpp  format.hpp  lazy.hpp  result.hpp  time.hpp
include/nexus/exec/: builder.hpp  policy.hpp  pool.hpp  queue.hpp  task.hpp  thread.hpp  worker.hpp
include/nexus/exec/thread/: builder.hpp  pool.hpp  worker.hpp
include/nexus/format/: ansi.hpp
include/nexus/private/exec/: queue.hpp  task.hpp
include/nexus/sync/: mutex.hpp
include/nexus/utils/: format.hpp  result.hpp  time.hpp
include/nexus/utils/result/: variant.hpp
nix/: clang-tools.nix
src/: error.cpp  meson.build
src/exec/: builder.cpp  meson.build  pool.cpp  queue.cpp  worker.cpp
src/exec/queue/: fifo.cpp  lifo.cpp  meson.build  prio.cpp  rand.cpp
test/: meson.build  test_curried.cpp  test_lazy.cpp  test_result.cpp
test/exec/: meson.build  test_pool.cpp  test_queue.cpp  test_stress_pool.cpp  test_task.cpp  test_worker.cpp
test/stress/: meson.build  stest_pool.cpp  stest_result.cpp
test/sync/: meson.build  test_lock.cpp
test/utils/: meson.build  test_result.cpp
