# test_task_src = files('test_task.cpp')
# test_task = executable(
#     'test_task',
#     test_task_src,
#     dependencies: test_deps,
#     cpp_args: test_args,
# )

# test('test_task', test_task)

# test_queue_src = files('test_queue.cpp')
# test_queue = executable(
#     'test_queue',
#     test_queue_src,
#     dependencies: test_deps,
#     cpp_args: test_args,
# )

# test('test_queue', test_queue)

test_src += files(
    'test_queue.cpp',
    'test_task.cpp',
)