stest_result_src = files(
    'stest_result.cpp',
)
executable(
    'stest_result',
    stest_result_src,
    dependencies: test_deps_not_unit,
    cpp_args: test_args,
    install: false,
)

stest_pool_src = files(
    'stest_pool.cpp',
)
executable(
    'stest_pool',
    stest_pool_src,
    dependencies: test_deps_not_unit,
    cpp_args: test_args,
    install: false,
)